--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
     <h1>Hackathon title</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit deleniti laboriosam reiciendis sint! Consequuntur dolorem molestiae esse quidem modi itaque omnis quo, iure eaque, earum similique obcaecati! Exercitationem, consequatur architecto.</p>
-</body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit deleniti
+      laboriosam reiciendis sint! Consequuntur dolorem molestiae esse quidem
+      modi itaque omnis quo, iure eaque, earum similique obcaecati!
+      Exercitationem, consequatur architecto.
+    </p>
+  </body>
 </html>
