--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hackathon title</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit deleniti laboriosam reiciendis sint! Consequuntur dolorem molestiae esse quidem modi itaque omnis quo, iure eaque, earum similique obcaecati! Exercitationem, consequatur architecto.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit spell deleniti laboriosam reiciendis sint! Consequuntur dolorem molestiae esse quidem modi itaque omnis quo, iure eaque, earum similique obcaecati! Exercitationem, consequatur architecto.</p>
 </body>
 </html>
